Fix overflow of sequence inputs

--- a/public/css/components/bases_form.scss
+++ b/public/css/components/bases_form.scss
@@ -10,6 +10,7 @@
     .highlighted-input__input {
       display: block;
       width: 500px;
+      overflow: hidden;
     }
 
     div.highlighted-input__input {
